# RelayMCP

./: LICENSE  README.md  api_endpoints_review.md  main.py  mcp_implementation.md  mcp_planning.md  pyproject.toml  schema.md
src/: auth.py  models.py  server.py  tools.py
